--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -109,14 +109,14 @@
           </h3>
           <h3>
             My hobbies include playing video games like Counterstrike and more
-            recently playing games likes <strong>AMONG US</strong> with my
+            recently playing games like <strong>AMONG US</strong> with my
             friends as well as getting frequent exercise through means like
-            running. I live in a semi-small town call Collingwood in Ontario
+            running. I live in a semi-small town called Collingwood in Ontario
             Canada and go to
             <strong>Our lady of the Bay Catholic Highschool</strong>. Throughout
             my time in highschool I have been very
             <strong>academically focused</strong> and I am always looking to
-            succeed in my classes . My favourite classed of highscool have been
+            succeed in my classes . My favourite classes of highscool have been
             <strong>Computer Science and Physics</strong> and this is why I am
             looking to pursue a career where I can use the skills these classes
             taught me.
